--- a/_sass/tiles.scss
+++ b/_sass/tiles.scss
@@ -117,7 +117,7 @@
 		.label {
 			top: auto;
 			margin: 5px;
-			font-size: inherit;
+			font-size: 85%;
 		}
 
 		.tile-title{
